# AoC2022

./: AoC2022.cabal
.github/workflows/: haskell.yml
Day01/: Day01.hs
Day02/: Day02.hs
Day03/: Day03.hs
Day04/: Day04.hs
Day05/: Day05.hs
Day06/: Day06.hs
Day07/: Day07.hs
Day08/: Day08.hs
Day09/: Day09.hs
Day10/: Day10.hs
Day12/: Day12.hs
Day13/: Day13.hs
Day15/: Day15.hs
Day17/: Day17.hs
Day23/: Day23.hs
app/: Main.hs
util/: Literal.hs
