cabal-version:      2.4
name:               AoC2022
version:            0.1.0.0
author:             Philipp Bausch
maintainer:         bauschp@informatik.uni-freiburg.de
extra-source-files: CHANGELOG.md

common shared-properties
  default-language: Haskell2010
  build-depends:
     base ^>=4.14.1.0
    ,containers
    ,template-haskell
  ghc-options:
    -Wall


library
    import: shared-properties
    hs-source-dirs:
        util
        Day01
        Day02
        Day03
        Day04
        Day05
        Day06
        Day07
        Day08
        Day09
        Day10
        
    exposed-modules:
        Day01
        Day02
        Day03
        Day04
        Day05
        Day06
        Day07
        Day08
        Day09
        Day10
    other-modules:
        Literal


executable runAllTests
    import: shared-properties
    main-is:          Main.hs
    hs-source-dirs:   app
    build-depends:
        AoC2022
